# module-2_homework-7

./: .gitignore  pyproject.toml
database/: CRUD.py  connect_db.py  models.py  my_select.py  seed.py
migrations/: env.py
migrations/versions/: caed8672b7bd_first.py
